Update 'i9bhd3faf-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:154d5f01b5f0007caa38a16b2902ce0d73d30d96@sha256:fa66415af50ffb548a0b7394a6e1bf455b9ce9390a385268437570cbd4069404

--- a/components/i9bhd3faf-go/overlays/development/deployment-patch.yaml
+++ b/components/i9bhd3faf-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: i9bhd3faf-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:154d5f01b5f0007caa38a16b2902ce0d73d30d96@sha256:fa66415af50ffb548a0b7394a6e1bf455b9ce9390a385268437570cbd4069404
+          name: container-image
